<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wall_follower</name>
  <version>0.0.0</version>
  <description>Logic for wall following, finding wall, and odom recording</description>
  <maintainer email="manuel.mezo@example.com">Manuel Mezo</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>wall_follower_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flak8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>